<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vendetta</string>
    <string name="app_news">News</string>
    
    <!-- MMS Strings -->
    <string name="mms_by">by MMS</string>
    <string name="mms_account">MMS Account</string>
    <string name="mms_register">Register on MMS</string>
    
    <string name="facebook_app_id">171116606398250</string>
    
    <string-array name="fb_read_permissions">
        <item>email</item>
    </string-array>
    
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    
    <string name="menu_logout">Logout</string>
    <string name="menu_refresh">Refresh</string>
    
    <!-- Strings for Splash -->
    <string name="login">Login</string>
    
    <!-- Strings for Discography -->
    <string name="empty_albums">No albums found</string>
    <string name="released_on">Released on</string>
    <string name="by">by</string>
    
    <!-- Strings for Gallery -->
    <string name="gallery_title">Gallery</string>
    <string name="set_wallpaper">Set as wallpaper</string>
    
    <!-- Strings for News -->
    <string name="news_title">News</string>
    <string name="empty_news">No news found</string>
    
    <!-- Strings for Events -->
    <string name="events_title">Events</string>
    <string name="empty_concerts">No concerts coming</string>
    
    <!-- Strings for Videos -->
    <string name="videos_title">Videos</string>
    
    <!-- Strings for Discography -->
    <string name="discography_title">Discography</string>
    <string name="demo_track">(Demo)</string>
    
    <!-- Strings for Profile -->
    <string name="greeting">Hi there, %s!</string>
    <string name="rate_how_to">How to eaen it?</string>
    <string name="rate_benefits">Benefits?</string>
    
    <!-- Strings for Forms -->
    <string name="form_name">Name: </string>
    <string name="form_username">Username: </string>
    <string name="form_email">Email: </string>
    <string name="form_register">Register</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="form_general">General</string>
    <string name="hint_name">Name</string>
    <string name="form_account">Account</string>
    <string name="hint_username">Username</string>
    <string name="hint_confirm_password">Confirm Password</string>
    
    <!-- Strings for Errors -->
    <string name="error_google_plus">Connection to Google+ failed</string>
    <string name="error_verify_data">Verify your information</string>
    <string name="error_invalid_date">Select a valid date</string>
    <string name="error_wrong_cookie">Login again. Your cookie expired</string>
    <string name="error_connection_failed">Connection Failed</string>
    <string name="error_demo_failed">Failed to play demo track</string>
    
    <!-- Strings for Notices -->
    <string name="notice_register_successful">Register Successful</string>
    
</resources>