<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp" >

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="#000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/form_general"
            android:textSize="20sp" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="#000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <EditText android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="textCapWords" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button android:id="@+id/edit_birthday"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="onDateClicked" />

            <Spinner android:id="@+id/edit_gender"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:entries="@array/genders"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp" >

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="#000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/form_account"
            android:textSize="20sp" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="#000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp" >

        <EditText android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            android:singleLine="true"
            android:layout_margin="1dp" />

        <EditText android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:layout_margin="1dp"/>

        <EditText android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:layout_margin="1dp"/>

        <EditText android:id="@+id/password_conf_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword"
            android:layout_margin="1dp"/>
    </LinearLayout>

</LinearLayout>